# omex-sniper

./: .dockerignore  .env  .gitignore  BATCH_PROCESSING_README.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.dev  GITHUB_ACTIONS_SETUP.md  HISTORICAL_CANCELLATION_FIX.md  MORALIS_API_MIGRATION.md  MORALIS_NONE_RESPONSE_FIX.md  Makefile  PRICE_UPDATE_README.md  README.md  SOLANATRACKER_PRIMARY_SYSTEM.md  SOLSCAN_API_MIGRATION.md  app.py  bot_config.json  bot_config.json.example  bot_config_b.json  config.py  doc.txt  docker-compose.dev.yml  docker-compose.yml  env.example  frontend_integration_test_results.json  frontend_tokens_data.json  get_test_token.py  gui.py  helius_api.py  main.py  nginx.conf  price_monitor.py  pump_api_test_results.json  pump_fun_monitor.py  pump_helius_test_results.json  pump_tokens_test_results.json  pumpportal_trader.py  pyproject.toml  quick_token_test.py  (+74 more)
.github/workflows/: ci.yml  dependency-update.yml  docker-build-push.yml  docker-scan.yml
core/: pump_monitor.py  pump_trader.py  solana_client.py  token_filter.py
models/: schemas.py  user.py
scripts/: deploy.ps1
services/: auth_service.py  config_service.py  database_service.py  monitoring_service.py  sniper_service.py  trading_service.py
static/css/: style.css
static/js/: app.js
templates/: index.html
