[project]
name = "omex-coin-sniper-api"
version = "1.0.0"
description = "A well-documented, production-ready API microservice for coin sniping operations on the Solana blockchain"
requires-python = ">=3.11"
dependencies = [
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "flask-restx==1.1.0",
    "werkzeug>=2.0.0,<3.0.0",
    "python-dotenv==1.0.0",
    "solana==0.30.2",
    "solders==0.18.1",
    "base58==2.1.1",
    "aiohttp==3.8.6",
    "websockets==11.0.3",
    "websocket-client==1.6.4",
    "pydantic==2.5.0",
    "requests==2.31.0",
    "httpx>=0.23.0,<0.24.0",
    "cryptography>=40.0.0",
    "construct>=2.10.67,<=2.10.68",
    "borsh-construct==0.1.0",
    "keyring==24.3.0",
    "sqlalchemy>=1.4.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0"
]

[project.scripts]
omex-sniper = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py", "services", "models", "core"]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.9.1",
    "flake8==6.1.0",
    "mypy==1.6.1"
]
